# MonuDash

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md
.cursor/rules/: my-setup.mdc  python.mdc
.github/workflows/: docker-build.yml
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/models/: monument.py
backend/scripts/: fetch_coordinates.py
backend/src/monudash/: __init__.py  constants.py  database.py  main.py  static
backend/src/monudash/models/: monument.py
backend/src/monudash/scripts/: csv_to_db.py  fetch_coordinates.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/models/: 468916_DCLB_Uebung3.glb
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ModelViewer.tsx
frontend/src/utils/: leaflet-icons.ts
resources/: denkmal_prodenkmal_csv.csv  monuments.db  monuments_with_coordinates.csv
