[project]
name = "monudash"
version = "0.1.0"
description = "Backend for the MonuDash application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "osmnx>=2.0.5",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "shapely>=2.1.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monudash"]
